@@ -37,6 +37,8 @@ namespace DigikamGenericMetadataEditPlugin
 XMPSubjects::XMPSubjects(QWidget* const parent)
     : SubjectWidget(parent)
 {
+    m_iprDefault = QLatin1String("XMP");
+
     // Subject string do not accept these characters:
     // - '*' (\x2A)
     // - ':' (\x3A)
@@ -46,7 +48,7 @@ XMPSubjects::XMPSubjects(QWidget* const parent)
 
     // --------------------------------------------------------
 
-    m_iprEdit->setText(QLatin1String("XMP"));
+    m_iprEdit->setText(m_iprDefault);
     m_iprEdit->setValidator(subjectValidator);
     m_iprEdit->setWhatsThis(i18n("Enter here the Informative Provider Reference. "
                                   "I.P.R is a name registered with the XMP/NAA, identifying the "
